hide scrollbar when screen shakes, also stoped selection of dialogue text

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,7 @@ body {
 	margin: 0 0;
 	padding: 0 0;
 	opacity: 0;
+	overflow-x:hidden;
 }
 
 #backgroundImg {
@@ -286,6 +287,13 @@ Conversation Divs
 	-webkit-text-stroke-width: 1px;
    	-webkit-text-stroke-color: black;
    	opacity: 0;
+   	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 .dialogue {
@@ -306,6 +314,13 @@ Conversation Divs
 	font-size: 25px;
 	text-align: left;
 	color: white;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 #dialogueBtnContainer {
